add routes, controller and swagger doc
